@@ -8,22 +8,20 @@ import net.minecraft.text.Text;
 import net.minecraft.util.math.Vec3d;
 import net.minecraft.world.World;
 import one.oth3r.directionhud.DirectionHUD;
-import one.oth3r.directionhud.DirectionHUDClient;
-import one.oth3r.directionhud.common.Assets;
-import one.oth3r.directionhud.common.Destination;
-import one.oth3r.directionhud.common.HUD;
-import one.oth3r.directionhud.common.files.PlayerData;
-import one.oth3r.directionhud.common.files.config;
+import one.oth3r.directionhud.common.files.dimension.Dimension;
+import one.oth3r.directionhud.common.files.dimension.DimensionEntry;
+import one.oth3r.directionhud.common.files.dimension.DimensionEntry.*;
+import one.oth3r.directionhud.common.files.dimension.DimensionSettings;
+import one.oth3r.directionhud.common.files.dimension.RatioEntry;
+import one.oth3r.directionhud.common.template.FeatureChecker;
 import one.oth3r.directionhud.common.utils.CUtl;
-import one.oth3r.directionhud.common.utils.Helper.Dim;
+import one.oth3r.directionhud.common.utils.Helper.*;
 import org.jetbrains.annotations.NotNull;
 import org.joml.Vector3f;
 
 import java.awt.*;
-import java.util.ArrayList;
-import java.util.HashMap;
+import java.util.*;
 import java.util.List;
-import java.util.Random;
 
 public class Utl {
     public static CTxT getTranslation(String key, Object... args) {
@@ -36,25 +34,10 @@ public class Utl {
         else txt.append(String.valueOf(obj));
         return txt;
     }
-    public static void setTime() {
-        World world = DirectionHUD.server.getOverworld();
-        long timeTicks = world.getTimeOfDay();
-        HUD.hour = (int) ((timeTicks / 1000 + 6) % 24);
-        HUD.minute = (int) ((timeTicks % 1000) * 60 / 1000);
-        if (world.isRaining()) {
-            String str;
-            if (world.isNight()) str = Assets.symbols.moon;
-            else str = Assets.symbols.sun;
-            // can sleep during thunderstorm
-            if (world.isThundering()) HUD.weatherIcon = Assets.symbols.moon + Assets.symbols.thunder;
-            else HUD.weatherIcon = str + Assets.symbols.rain;
-        } else if (world.isNight()) HUD.weatherIcon = Assets.symbols.moon;
-        else HUD.weatherIcon = Assets.symbols.sun;
-    }
     public static List<Player> getPlayers() {
         ArrayList<Player> array = new ArrayList<>();
         for (ServerPlayerEntity p : DirectionHUD.server.getPlayerManager().getPlayerList())
-            array.add(Player.of(p));
+            array.add(new Player(p));
         return array;
     }
     public static class vec {
@@ -66,36 +49,33 @@ public class Utl {
             else return new Vec3d(0,0,0);
         }
     }
-    public static class checkEnabled {
-        //todo add a bool for singleplayer for perm checking
-        public static boolean customPresets(Player player) {
-            return config.MAXColorPresets > 0;
+
+    public static class CheckEnabled extends FeatureChecker {
+        public CheckEnabled(Player player) {
+            super(player);
         }
-        public static boolean destination(Player player) {
-            return true;
+
+        @Override
+        public boolean globalEditing() {
+            return super.globalEditing() && (player.getPlayer().hasPermissionLevel(2) || DirectionHUD.singleplayer);
         }
-        public static boolean hud(Player player) {
-            return config.HUDEditing;
+
+        @Override
+        public boolean send() {
+            return super.send() && DirectionHUD.server.isRemote();
         }
-        public static boolean reload(Player player) {
-            return player.getPlayer().hasPermissionLevel(2) || DirectionHUDClient.singleplayer;
+
+        @Override
+        public boolean track() {
+            return super.track() && DirectionHUD.server.isRemote();
         }
-        public static boolean global(Player player) {
-            return config.globalDESTs && (player.getPlayer().hasPermissionLevel(2) || DirectionHUDClient.singleplayer);
-        }
-        public static boolean saving(Player player) {
-            return config.DestSaving;
-        }
-        public static boolean lastdeath(Player player) {
-            return (boolean) PlayerData.get.dest.setting(player, Destination.Setting.features__lastdeath) && config.LastDeathSaving;
-        }
-        public static boolean send(Player player) {
-            return (boolean) PlayerData.get.dest.setting(player, Destination.Setting.features__send) && config.social && DirectionHUD.server.isRemote();
-        }
-        public static boolean track(Player player) {
-            return (boolean) PlayerData.get.dest.setting(player, Destination.Setting.features__track) && config.social && DirectionHUD.server.isRemote();
+
+        @Override
+        public boolean reload() {
+            return player.getPlayer().hasPermissionLevel(2) || DirectionHUD.singleplayer;
         }
     }
+
     public static class particle {
         public static final String LINE = "LINE";
         public static final String DEST = "DEST";
@@ -117,46 +97,75 @@ public class Utl {
             }
         }
         public static DustParticleEffect getParticle(String particleType, Player player) {
-            String hex = (String) PlayerData.get.dest.setting(player, Destination.Setting.particles__dest_color);
+            String hex = player.getPCache().getDEST().getDestSettings().getParticles().getDestColor();
             if (particleType.equals(DEST)) return new DustParticleEffect(new Vector3f(Vec3d.unpackRgb(Color.decode(CUtl.color.format(hex)).getRGB()).toVector3f()),3);
-            hex = (String) PlayerData.get.dest.setting(player, Destination.Setting.particles__line_color);
+            hex = player.getPCache().getDEST().getDestSettings().getParticles().getLineColor();
             if (particleType.equals(LINE)) return new DustParticleEffect(new Vector3f(Vec3d.unpackRgb(Color.decode(CUtl.color.format(hex)).getRGB()).toVector3f()),1);
-            hex = (String) PlayerData.get.dest.setting(player, Destination.Setting.particles__tracking_color);
+            hex = player.getPCache().getDEST().getDestSettings().getParticles().getTrackingColor();
             if (particleType.equals(TRACKING)) return new DustParticleEffect(new Vector3f(Vec3d.unpackRgb(Color.decode(CUtl.color.format(hex)).getRGB()).toVector3f()),0.5f);
             hex = "#000000";
             return new DustParticleEffect(new Vector3f(Vec3d.unpackRgb(Color.decode(CUtl.color.format(hex)).getRGB()).toVector3f()),5f);
         }
     }
+
     public static class dim {
-        public static final List<String> DEFAULT_DIMENSIONS = List.of("minecraft.overworld|Overworld|#55FF55","minecraft.the_nether|Nether|#e8342e","minecraft.the_end|End|#edffb0");
-        public static final List<String> DEFAULT_RATIOS = List.of("minecraft.overworld=1|minecraft.the_nether=8");
+
+        public static ArrayList<DimensionEntry> DEFAULT_DIMENSIONS = new ArrayList<>(Arrays.asList(
+                new DimensionEntry("minecraft:overworld", "Overworld", "#55FF55",Dimension.OVERWORLD_TIME_ENTRY),
+                new DimensionEntry("minecraft:the_nether", "Nether", "#e8342e", new Time(true)),
+                new DimensionEntry("minecraft:the_end", "End", "#edffb0", new Time(true))
+        ));
+
+        public static ArrayList<RatioEntry> DEFAULT_RATIOS = new ArrayList<>(List.of(
+                new RatioEntry(new Pair<>("minecraft:overworld", 1.0), new Pair<>("minecraft:the_nether", 8.0))
+        ));
+
         /**
          * formats the un-formatted dimension received from the game
          * @param worldRegistryKey the worldRegistryKey
          * @return the formatted dimension string
          */
         public static String format(RegistryKey<World> worldRegistryKey) {
-            return worldRegistryKey.getValue().toString().replace(":",".");
+            return worldRegistryKey.getValue().toString();
         }
+
+        /**
+         * FABRIC ONLY
+         * <p>
+         * reverts back dimensions from "minecraft.dim" to "minecraft:dim" to be more vanilla like
+         * @param oldDimension dimension to update
+         * @return updated dimension
+         */
+        public static String updateLegacy(String oldDimension) {
+            return oldDimension.replaceFirst("\\.",":");
+        }
+
         /**
          * adds the dimensions that are loaded in game but aren't in the config yet
          */
-        public static void addMissing() {
+        public static void addMissing(DimensionSettings dimensionSettings) {
             Random random = new Random();
-            HashMap<String,HashMap<String,String>> missing = new HashMap<>();
+            if (DirectionHUD.server == null) return;
+            ArrayList<DimensionEntry> dimensions = dimensionSettings.getDimensions();
             //ADD MISSING DIMS TO MAP
             for (ServerWorld world : DirectionHUD.server.getWorlds()) {
                 String currentDIM = format(world.getRegistryKey());
-                if (Dim.getAll().contains(currentDIM)) continue;
-                HashMap<String,String> map = new HashMap<>();
-                map.put("name",getFormattedDim(world));
+                // if already exist, continue
+                if (dimensions.stream()
+                        .anyMatch(dimension -> dimension.getId().equals(currentDIM)) ) continue;
+                DimensionEntry entry = new DimensionEntry();
+                // add the dimension name
+                entry.setId(currentDIM);
+                // add the formatted name
+                entry.setName(getFormattedDim(world));
                 //make a random color to spice things up
-                map.put("color",String.format("#%02x%02x%02x",
+                entry.setColor(String.format("#%02x%02x%02x",
                         random.nextInt(100,256),random.nextInt(100,256),random.nextInt(100,256)));
-                missing.put(currentDIM,map);
+                // add the entry
+                dimensions.add(entry);
             }
-            Dim.addDimensions(missing);
         }
+
         /**
          * tries to generate a formatted name for the dimension
          * @param world the dimension world
@@ -164,13 +173,13 @@ public class Utl {
          */
         @NotNull
         private static String getFormattedDim(ServerWorld world) {
-            // get the path of the dimension, removes the "minecraft."
+            // get the path of the dimension, removes the "minecraft:"
             String formatted = world.getRegistryKey().getValue().getPath();
             // remove all "_" "the_nether" -> "the nether"
             formatted = formatted.replaceAll("_"," ");
             // remove 'the' "the nether" -> "nether"
             formatted = formatted.replaceFirst("the ","");
-            // captilize the first letter "nether" -> "Nether"
+            // capitalize the key letter "nether" -> "Nether"
             formatted = formatted.substring(0,1).toUpperCase()+formatted.substring(1);
             return formatted;
         }
